add html to pages

--- a/index.html
+++ b/index.html
@@ -1,10 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>A simple HTML document</title>
+    <title>Salon Andula</title>
+    <nav>
+      <a href="index.html">Úvod</a>
+      <a href="price/cenik.html">Ceník</a>
+      <a href="gallery/galerie.html">Galerie</a>
+      <a href="poukaz/poukazy.html">Dárkové poukazy</a>
+      <a href="aboutus/about.html">O nás</a>
+      <a href="contact/kontakt.html">kontakt</a>
+    </nav>
   </head>
   <body>
-    <p>Hello World!</p>
+    <h1>Salon Andula</h1>
+
+    <div>
+      Salon nabízí kompletní služby v oblasti pedikúry. Na své si u nás přijdou
+      všichni ti kdo rádi pečují o své tělo, ale i duši. Náleznou zde příjemné
+      místo k odpočinku. Salon není určen jen pro ženy, ale také pro muže.
+      Vítáni jsou všichni. Věříme, že budete u nás spokojeni stejně jako mnoho
+      našich zákazníků, kteří se stali našimi pravidelnými klienty
+    </div>
     <p></p>
+    <h2>Moje služby</h2>
+    <div class="mokraPedi">
+      Pedikúra Poskytuji mokrou pedikúru, kombinovanou pedikúru, suchou
+      pedikúru. Která dokáže vyřešit nepříjemné problémy například...
+      popraskanou kůži na patách, kuří oka nebo zarostlé nehty. Můžete se na mě,
+      ale obrátit v případech, kdy chcete mít jen hezky upravené nohy na léto (
+      a zimu ). 🙂
+    </div>
+    <div class="luxus">
+      Luxusní pedikúra Footlogix Bezskalpelová pedikúra za použití přípravky
+      kanadské značky Footlogix obsahující řadu vitamínů a minerálních látek bez
+      použití syntetických olejů.
+    </div>
+    <div class="gellak">
+      Gel lak Gel, který je vhodný na přírodní nehty, je vysoce odolný vůči
+      poškrábání. Vyznačuje se trvanlivostí a zářivého lesku barvy. To je, že
+      vám na vašich nehtech vydrží až měsíc, bez nejlepšího poničení a vaše
+      nehty vypadají stále krásně upravené dlouhou dobu.
+    </div>
+    <div class="hloubkovaMasaz">
+      Hloubková masáž chodidel Hloubková masáž chodidel vychází z reflexní
+      masáže. Slouží k relaxaci, uvolnění napětí v těle a revitalizaci. Při
+      masáži se spouští samoozdravné procesy a regenerace celého těla. Výsledek
+      můžeme přirovnat k celotělové masáži.
+    </div>
+    <div class="parafin">
+      Parafínový zábal ruce/nohy Parafín je speciální obohacený vosk o vitamín
+      E. Má velké zdravotní a kosmetické účinky a vyniká úžasnou schopností
+      zadržovat teplo. Jde o blahodárnou proceduru, která kombinuje jak
+      zdravotní, tak i estetické účinky , které jsou viditelné od první
+      aplikace.
+    </div>
+    <div class="diabetik">
+      Pedikúra pro diabetiky Diabetici mají možnost proplácení v rámci
+      preventivních programů pojišťoven!
+    </div>
+    <div class="Dojezd">
+      Dojezd a ošetření v domácím prostředí Tato služba je kompletní ošetření
+      nohou v domácím prostředí.
+    </div>
+    <div class="contact">
+      Rezervujte si termín.... Domluvíme si termín u mě v salonu nebo u vás doma
+      a já udělám všechno pro vaše zdravé a krásné nohy. Zavolejte: +420 721 291
+      690
+    </div>
   </body>
 </html>
