--- a/poukaz/poukazy.html
+++ b/poukaz/poukazy.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><h1>Dárkové poukazy</h1></title>
     <nav>
-      <a href="index.html">Úvod</a>
-      <a href="price/cenik.html">Ceník</a>
-      <a href="gallery/galerie.html">Galerie</a>
-      <a href="poukaz/poukazy.html">Dárkové poukazy</a>
-      <a href="aboutus/about.html">O nás</a>
-      <a href="contact/kontakt.html">kontakt</a>
+      <a href="/main.html">Úvod</a>
+      <a href="/price/cenik.html">Ceník</a>
+      <a href="/gallery/galerie.html">Galerie</a>
+      <a href="/poukaz/poukazy.html">Dárkové poukazy</a>
+      <a href="/aboutus/about.html">O nás</a>
+      <a href="/contact/kontakt.html">kontakt</a>
     </nav>
   </head>
   <body>
