--- a/contact/kontakt.html
+++ b/contact/kontakt.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="../styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Kontakt</title>
     <nav>
       <a href="/main.html">Úvod</a>
       <a href="/price/cenik.html">Ceník</a>
