--- a/poukaz/poukazy.html
+++ b/poukaz/poukazy.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="../styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><h1>Dárkové poukazy</h1></title>
+    <title>Dárkové poukazy</title>
     <nav>
       <a href="/main.html">Úvod</a>
       <a href="/price/cenik.html">Ceník</a>
