change navbar to fix path.

--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <h1>Salon Andula</h1>
-
+    <div class="motto">Nohy v nebi, duše v oblacích</div>
     <div>
       Salon nabízí kompletní služby v oblasti pedikúry. Na své si u nás přijdou
       všichni ti kdo rádi pečují o své tělo, ale i duši. Naleznou zde příjemné
