fix to fix navbar path

--- a/contact/kontakt.html
+++ b/contact/kontakt.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kontakt</title>
     <nav>
-      <a href="/main.html">Úvod</a>
-      <a href="/price/cenik.html">Ceník</a>
-      <a href="/gallery/galerie.html">Galerie</a>
-      <a href="/poukaz/poukazy.html">Dárkové poukazy</a>
-      <a href="/aboutus/about.html">O nás</a>
-      <a href="/contact/kontakt.html">kontakt</a>
+      <a href="../main.html">Úvod</a>
+      <a href="../price/cenik.html">Ceník</a>
+      <a href="../gallery/galerie.html">Galerie</a>
+      <a href="../poukaz/poukazy.html">Dárkové poukazy</a>
+      <a href="../aboutus/about.html">O nás</a>
+      <a href="../contact/kontakt.html">kontakt</a>
     </nav>
   </head>
   <body>
