--- a/price/cenik.html
+++ b/price/cenik.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ceník</title>
     <nav>
-      <a href="/main.html">Úvod</a>
+      <a href="../main.html">Úvod</a>
       <a href="../price/cenik.html">Ceník</a>
       <a href="../gallery/galerie.html">Galerie</a>
       <a href="../poukaz/poukazy.html">Dárkové poukazy</a>
