--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <title>Salon Andula</title>
 
     <nav class="mainMenu">
-      <a href="../main.html">Úvod</a>
+      <a href="/main.html">Úvod</a>
       <a href="../price/cenik.html">Ceník</a>
       <a href="../gallery/galerie.html">Galerie</a>
       <a href="../poukaz/poukazy.html">Dárkové poukazy</a>
