--- a/price/cenik.html
+++ b/price/cenik.html
@@ -7,11 +7,11 @@
     <title>Ceník</title>
     <nav>
       <a href="../main.html">Úvod</a>
-      <a href="../price/cenik.html">Ceník</a>
-      <a href="../gallery/galerie.html">Galerie</a>
-      <a href="../poukaz/poukazy.html">Dárkové poukazy</a>
-      <a href="../aboutus/about.html">O nás</a>
-      <a href="../contact/kontakt.html">kontakt</a>
+      <a href="cenik.html">Ceník</a>
+      <a href="galerie.html">Galerie</a>
+      <a href="poukazy.html">Dárkové poukazy</a>
+      <a href="about.html">O nás</a>
+      <a href="kontakt.html">kontakt</a>
     </nav>
   </head>
   <body>
