fix the navbar to relative path and add html pages to only one folder to same level.

--- a/galerie.html
+++ b/galerie.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="../styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ceník</title>
+    <title>Galerie</title>
     <nav>
-      <a href="../main.html">Úvod</a>
+      <a href="main.html">Úvod</a>
       <a href="cenik.html">Ceník</a>
       <a href="galerie.html">Galerie</a>
       <a href="poukazy.html">Dárkové poukazy</a>
@@ -14,7 +14,5 @@
       <a href="kontakt.html">kontakt</a>
     </nav>
   </head>
-  <body>
-    <h1>Ceník</h1>
-  </body>
+  <body></body>
 </html>
