add a picture of main pages and fix gallery

--- a/cenik.html
+++ b/cenik.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ceník</title>
     <nav>
@@ -16,5 +16,24 @@
   </head>
   <body>
     <h1>Ceník</h1>
+    <div class="price">
+      <p>Základní pedikúra 500 Kč</p>
+      <p>Kompletní mokrá pedikúra 800 Kč</p>
+      <p>Pedikúra s gel lakem 700 Kč</p>
+      <p>Kombinovaná pedikúra 550 Kč</p>
+      <p>Přístrojová ( suchá ) pedikúra 550 Kč</p>
+      <p>Luxusní pedikúra Footlogix 690 Kč</p>
+      <p>Pedikúra s hloubkovou masáží 875 Kč</p>
+      <p>Hloubková masáž 550 Kč</p>
+      <p>Samostatné ošetření zarostlého nehtu 200 Kč</p>
+      <p>Samostatné ošetření kuří oko 150 Kč</p>
+      <p>Samostatné stříhání nehtů, úprava 200 Kč</p>
+      <p>Gel lak bez procedury 400 Kč</p>
+      <p>
+        Parafínový zábal 150 Kč Mobilní služby ( dojezd domu ) okruh 30km
+        Uvedená cena za 1 km 10 Kč
+      </p>
+      <p>Ceník platný od 1.7.2024</p>
+    </div>
   </body>
 </html>
