--- a/galerie.html
+++ b/galerie.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galerie</title>
+  </head>
+  <header>
+    <h1>Galerie</h1>
     <nav>
       <a href="main.html">Úvod</a>
       <a href="cenik.html">Ceník</a>
@@ -13,6 +16,38 @@
       <a href="about.html">O nás</a>
       <a href="kontakt.html">kontakt</a>
     </nav>
-  </head>
-  <body></body>
+  </header>
+  <body class="galerie">
+    <div class="prace">
+      <img src="img/proměna_1.jpg" alt="proměna nohy před/po" class="img1" />
+      <img src="img/promena_2.jpg" alt="proměna nohy před/po" class="img1" />
+      <img
+        src="img/promena_3patat.jpg"
+        alt="proměna paty před/po"
+        class="img1"
+      />
+      <img src="img/promena_4.jpg" alt="proměna nohy před/po" class="img1" />
+      <img
+        src="img/promena_pata4.jpg "
+        alt="proměna nohy před/po"
+        class="img1"
+      />
+      <img
+        src="img/promena_5pata.jpg"
+        alt="proměna paty před/po"
+        class="img1"
+      />
+      <img
+        src="img/promena_6pata.jpg"
+        alt="proměna paty před/po"
+        class="img1"
+      />
+      <img src="img/promena_7.jpg" alt="proměna nohy před/po" class="img1" />
+      <img
+        src="img/promena_palec9.jpg"
+        alt="proměna nohy před/po"
+        class="img1"
+      />
+    </div>
+  </body>
 </html>
