--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1>Salon Andula</h1>
     <a href="main.html">Pokračuj</a>
+    <img src="img/foto_skoleni_ruzove.jpeg" class="uvod_img" />
   </body>
 </html>
