--- a/main.html
+++ b/main.html
@@ -11,8 +11,13 @@
       <a href="poukazy.html">Dárkové poukazy</a>
       <a href="about.html">O nás</a>
       <a href="kontakt.html">kontakt</a>
+      <a href="index.html">Úvod</a>
     </nav>
   </head>
+  <img
+    src="img/foto_skoleni_2.jpeg"
+    alt="pedikérka pracující na noze klienta"
+  />
   <body>
     <h1>Salon Andula</h1>
     <div class="motto">Nohy v nebi, duše v oblacích</div>
