add style to navbar, fix main page to index

--- a/galerie.html
+++ b/galerie.html
@@ -7,9 +7,8 @@
     <title>Galerie</title>
   </head>
   <header>
-    <h1>Galerie</h1>
-    <nav>
-      <a href="main.html">Úvod</a>
+    <nav class="mainMenu">
+      <a href="index.html">Úvod</a>
       <a href="cenik.html">Ceník</a>
       <a href="galerie.html">Galerie</a>
       <a href="poukazy.html">Dárkové poukazy</a>
