--- a/poukazy.html
+++ b/poukazy.html
@@ -5,15 +5,17 @@
     <link rel="stylesheet" href="styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dárkové poukazy</title>
-    <nav>
-      <a href="main.html">Úvod</a>
+  </head>
+  <header>
+    <nav class="mainMenu">
+      <a href="index.html">Úvod</a>
       <a href="cenik.html">Ceník</a>
       <a href="galerie.html">Galerie</a>
       <a href="poukazy.html">Dárkové poukazy</a>
       <a href="about.html">O nás</a>
       <a href="kontakt.html">kontakt</a>
     </nav>
-  </head>
+  </header>
   <body>
     <div>
       Podmínky pro uplatnění dárkové poukázky Dárkovou poukázku může uplatnit
