--- a/index.html
+++ b/index.html
@@ -1,13 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
+    <title>Salon Andula</title>
   </head>
+  <header>
+    <nav class="mainMenu">
+      <a href="index.html">Úvod</a>
+      <a href="cenik.html">Ceník</a>
+      <a href="galerie.html">Galerie</a>
+      <a href="poukazy.html">Dárkové poukazy</a>
+      <a href="about.html">O nás</a>
+      <a href="kontakt.html">kontakt</a>
+    </nav>
+  </header>
   <body>
-    <h1>Salon Andula</h1>
-    <a href="main.html">Pokračuj</a>
-    <img src="img/foto_skoleni_ruzove.jpeg" class="uvod_img" />
-  </body>
+    <img
+      src="img/foto_skoleni_ruzove.jpeg"
+      alt="fotka nohou po péči pedikérky, nehty nalakované růžovým lakem"
+      class="imgMain"
+    />
+
+    <div class="nameMain">
+      <h1>Salon Andula</h1>
+      <p class="motto">Nohy v nebi, duše v oblacích</p>
+      <div>
+        Salon nabízí kompletní služby v oblasti pedikúry. Na své si u nás
+        přijdou všichni ti kdo rádi pečují o své tělo, ale i duši. Naleznou zde
+        příjemné místo k odpočinku. Salon není určen jen pro ženy, ale také pro
+        muže. Vítáni jsou všichni. Věříme, že budete u nás spokojeni stejně jako
+        mnoho našich zákazníků, kteří se stali našimi pravidelnými klienty
+      </div>
+    </div>
+    <p></p>
+    <h2>Moje služby</h2>
+    <div class="servis">
+      <div class="mokraPedi">
+        <h4>Pedikúra</h4>
+
+        Poskytuji mokrou pedikúru, kombinovanou pedikúru, suchou pedikúru. Která
+        dokáže vyřešit nepříjemné problémy. Jako například popraskanou kůži na
+        patách, kuří oka nebo zarostlé nehty. Můžete se na mě ale obrátit i v
+        případech, kdy chcete mít jen hezky upravené nohy na léto ( a zimu ). 🙂
+      </div>
+      <div class="luxus">
+        <h4>Luxusní pedikúra Footlogix</h4>
+
+        Bezskalpelová pedikúra za použití přípravky kanadské značky Footlogix
+        obsahující řadu vitamínů a minerálních látek bez použití syntetických
+        olejů.
+      </div>
+      <div class="gellak">
+        <h4>Gel lak</h4>
+        Gel, který je vhodný na přírodní nehty, Je vysoce odolný vůči
+        poškrábání. Vyznačuje se trvanlivostí a zářivým leskem barvy. Na vašich
+        nehtech vydrží až měsíc bez výrazného poničení, a vaše nehty budou
+        vypadat krásně upravené po dlouhou dobu.
+      </div>
+      <div class="hloubkovaMasaz">
+        <h4>Hloubková masáž chodidel</h4>
+        Hloubková masáž chodidel vychází z reflexní masáže. Slouží k relaxaci,
+        uvolnění napětí v těle a revitalizaci. Při masáži se spouští
+        samoozdravné procesy a regenerace celého těla. Výsledek můžeme přirovnat
+        k celotělové masáži.
+      </div>
+      <div class="parafin">
+        <h4>Parafínový zábal ruce/nohy</h4>
+        Parafín je speciální obohacený vosk o vitamín E. Má velké zdravotní a
+        kosmetické účinky a vyniká úžasnou schopností zadržovat teplo. Jde o
+        blahodárnou proceduru, která kombinuje jak zdravotní tak i estetické
+        účinky, které jsou viditelné od první aplikace.
+      </div>
+      <div class="diabetik">
+        <h4>Pedikúra pro diabetiky</h4>
+        Diabetici mají možnost proplácení v rámci preventivních programů
+        pojišťoven!
+      </div>
+      <div class="Dojezd">
+        <h4>Dojezd a ošetření v domácím prostředí</h4>
+        Tato služba obsahuje kompletní ošetření nohou v domácím prostředí.
+      </div>
+    </div>
+    <div class="ceny">
+      <h2>Služby</h2>
+      <span></span>
+      <button><span>Ceník</span></button>
+    </div>
+    
+  </body><footer>
+    <div class="rezervace">
+      <h3>Rezervujte si termín</h3>
+      <p>
+        Domluvíme si termín u mě v salonu nebo u vás doma a já udělám všechno
+        pro vaše zdravé a krásné nohy.
+      </p>
+
+      <p>Zavolejte: +420 721 291 690</p>
+    </div></footer>
 </html>
