add some color for example, styled page contact, about us, giftcard etc.

--- a/about.html
+++ b/about.html
@@ -17,7 +17,8 @@
     </nav>
   </header>
   <body>
-    <div>
+    <img src="img/foto_skoleni_2.jpeg" class="aboutImg" />
+    <div class="aboutContent">
       Jmenuji se Anna Seilerová. V roce 2022 jsem úspěšně prošla zkouškou a
       získala jsem Osvědčení o profesní kvalifikace Pedikérka a nehtová
       designérka. Proč jsem si vybrala tuto cestu ? Protože nohy nás nosí celý
