--- a/cenik.html
+++ b/cenik.html
@@ -19,23 +19,24 @@
   <body>
     <h1>Ceník</h1>
     <div class="price">
-      <p>Základní pedikúra 500 Kč</p>
-      <p>Kompletní mokrá pedikúra 800 Kč</p>
-      <p>Pedikúra s gel lakem 700 Kč</p>
-      <p>Kombinovaná pedikúra 550 Kč</p>
-      <p>Přístrojová ( suchá ) pedikúra 550 Kč</p>
-      <p>Luxusní pedikúra Footlogix 690 Kč</p>
-      <p>Pedikúra s hloubkovou masáží 875 Kč</p>
-      <p>Hloubková masáž 550 Kč</p>
-      <p>Samostatné ošetření zarostlého nehtu 200 Kč</p>
-      <p>Samostatné ošetření kuří oko 150 Kč</p>
-      <p>Samostatné stříhání nehtů, úprava 200 Kč</p>
-      <p>Gel lak bez procedury 400 Kč</p>
+      <p>Základní pedikúra <span> 500 Kč</span></p>
+      <p>Kompletní mokrá pedikúra <span> 800 Kč</span></p>
+      <p>Pedikúra s gel lakem <span>700 Kč</span></p>
+      <p>Kombinovaná pedikúra <span>550 Kč</span></p>
+      <p>Přístrojová ( suchá ) pedikúra <span>550 Kč</span></p>
+      <p>Luxusní pedikúra Footlogix <span>690 Kč</span></p>
+      <p>Pedikúra s hloubkovou masáží <span>875 Kč</span></p>
+      <p>Hloubková masáž <span>550 Kč</span></p>
+      <p>Samostatné ošetření zarostlého nehtu <span>200 Kč</span></p>
+      <p>Samostatné ošetření kuří oko <span>150 Kč</span></p>
+      <p>Samostatné stříhání nehtů, úprava <span>200 Kč</span></p>
+      <p>Gel lak bez procedury <span> 400 Kč</span></p>
+      <p>Parafínový zábal <span> 150 Kč</span></p>
       <p>
-        Parafínový zábal 150 Kč Mobilní služby ( dojezd domu ) okruh 30km
-        Uvedená cena za 1 km 10 Kč
+        Mobilní služby ( dojezd domu ) okruh 30km
+        <span>Uvedená cena za 1 km 10 Kč</span>
       </p>
-      <p>Ceník platný od 1.7.2024</p>
+      <p class="priceDate">Ceník platný od 1.7.2024</p>
     </div>
   </body>
 </html>
