--- a/kontakt.html
+++ b/kontakt.html
@@ -17,9 +17,12 @@
     </nav>
   </header>
   <body>
-    <div>
-      Salon Andula Jiráskova 656 Humpolec 39601 +420 721 291 690
-      anicka.seilerova@email.cz Otevírací doba Dle objednávek
+    <div class="contactContent">
+      <h3>Salon Andula</h3>
+      <p>Jiráskova 656 Humpolec 39601</p>
+      <p>+420 721 291 690</p>
+      <p>anicka.seilerova@email.cz</p>
+      <p>Otevírací doba Dle objednávek</p>
     </div>
   </body>
 </html>
