--- a/poukazy.html
+++ b/poukazy.html
@@ -17,16 +17,21 @@
     </nav>
   </header>
   <body>
-    <div>
-      Podmínky pro uplatnění dárkové poukázky Dárkovou poukázku může uplatnit
-      osoba, která ji jako první předloží před započetím služeb v AS mobilní
-      pedikúra. Dárkovou poukázku lze využít na všechny služby poskytované až do
-      výše hodnoty na ní stanovené, dle aktuálního ceníku. Dárkovou poukázku
-      nelze směnit za peníze ani vrátit nevyčerpanou hodnotu v penězích. Pokud
-      hodnota vykonaných služeb přesáhne hodnotu na poukázce je nutné rozdíl
-      doplatit v hotovosti. Dárková poukázka je časově omezena (datum vystavení
-      je uvedeno na poukázce - platnost 6 měsíců od koupi ). Uplynutím této doby
-      právo s ní spojené zaniká.
+    <img src="img/foto_skoleni_ruzovylak.jpeg" class="imgGift" />
+    <div class="giftCard">
+      <h3>Podmínky pro uplatnění dárkové poukázky</h3>
+      Dárkovou poukázku může uplatnit osoba, která ji jako první předloží před
+      započetím služeb v AS mobilní pedikúra.
+      <p></p>
+      Dárkovou poukázku lze využít na všechny služby poskytované až do výše
+      hodnoty na ní stanovené, dle aktuálního ceníku. Dárkovou poukázku nelze
+      směnit za peníze ani vrátit nevyčerpanou hodnotu v penězích. Pokud hodnota
+      vykonaných služeb přesáhne hodnotu na poukázce je nutné rozdíl doplatit v
+      hotovosti.
+      <p></p>
+      Dárková poukázka je časově omezena (datum vystavení je uvedeno na poukázce
+      - platnost 6 měsíců od koupi ). Uplynutím této doby právo s ní spojené
+      zaniká.
     </div>
   </body>
 </html>
