--- a/kontakt.html
+++ b/kontakt.html
@@ -17,6 +17,35 @@
     </nav>
   </header>
   <body>
+    <h1>Umístění Salonu</h1>
+    <div id="map"></div>
+    <body>
+      <h1>Umístění Salonu</h1>
+      <div id="map"></div>
+  
+      <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=VAŠE_API_KLÍČ&callback=initMap&libraries=marker"
+    ></script>
+
+    <script>
+        // Inicializace mapy
+        function initMap() {
+            let salonLocation = { lat: 49.542517, lng: 15.350389 };  // Opravené lng
+
+            // Vytvoření nové mapy
+            var map = new google.maps.Map(document.getElementById('map'), {
+                zoom: 15,
+                center: salonLocation,
+            });
+
+            // Přidání značky do mapy pomocí google.maps.Marker
+            const marker = new google.maps.Marker({
+                map: map,
+                position: salonLocation,
+            });
+        }
+    </script>
+
     <div class="contactContent">
       <h3>Salon Andula</h3>
       <p>Jiráskova 656 Humpolec 39601</p>
@@ -26,3 +55,7 @@
     </div>
   </body>
 </html>
+
+
+
+
